--- a/app/src/main/res/layout/fragment_mode_choice.xml
+++ b/app/src/main/res/layout/fragment_mode_choice.xml
@@ -4,19 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/puppy">
+    android:background="@drawable/glasses2">
 
     <Button
         android:id="@+id/literowoButton"
-        android:layout_width="358dp"
-        android:layout_height="78dp"
+        android:layout_width="354dp"
+        android:layout_height="65dp"
+        android:background="@drawable/button"
         android:text="@string/literkowo"
         android:textColor="#000000"
-        android:background="#FFFF"
+        android:fontFamily="@font/optician_sans"
+        android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24"/>
+        app:layout_constraintVertical_bias="0.235" />
 </androidx.constraintlayout.widget.ConstraintLayout>
