Setting letters color to black

--- a/app/src/main/res/layout/fragment_literkowo.xml
+++ b/app/src/main/res/layout/fragment_literkowo.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/optician_sans"
             android:text="0"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
